fixed font size on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,16 +12,24 @@ code {
   border-radius: 3px;
 }
 
+h2 {
+  font-size: 0.95em;
+}
+
+h3 {
+  font-size: 0.85em;
+}
+
 .App {
   padding: 16px 16px;
   font-family: 'Quicksand', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   max-width: 880px;
 }
 
 .typed-header {
   display: inline;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 @media screen and (min-width: 480px) {
