--- a/src/components/CV.scss
+++ b/src/components/CV.scss
@@ -1,3 +1,3 @@
 .cv-text {
-  font-size: 16px;
+  font-size: 0.75em;
 }
